--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="jarallax-0.2.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="main.css" />
+      <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body onload="init()">
