--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav ml-auto">
           <li><a href="#" class="nav-link">Bmw</a></li>
           <li><a href="#" class="nav-link">Ferrari</a></li>
-          <li><a href="#" onclick="" class="nav-link">Honda</a></li>
+          <li><a href="#" onclick="" class="nav-link">Porsche</a></li>
           <li><a href="#" class="nav-link">McLaren</a></li>
         </ul>
       </div>
@@ -32,7 +32,7 @@
       <div class="name2"><p>FERRARI</p></div>
   </div>
   <div class="bg3" id="third">
-      <div class="name3"><p>HONDA</p></div>
+      <div class="name3"><p>Porsche</p></div>
   </div>
   <div class="bg4" id="fourth">
     <div class="name4"><p>MCLAREN</p></div>
