--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="name2"><p>FERRARI</p></div>
   </div>
   <div class="bg3" id="third">
-      <div class="name3"><p>Porsche</p></div>
+      <div class="name3"><p>PORSCHE</p></div>
   </div>
   <div class="bg4" id="fourth">
     <div class="name4"><p>MCLAREN</p></div>
